objects/Dealer_Seg_Market_Share__c.object
<CustomObject>
    <description>This is a junction object between the Deal Segmentation object and the Market Share object.</description>
    <fields>
        <fullName>Animal_Count__c</fullName>
        <formula>Market_Share_ID__r.Animal_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Animal Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_FIPS__c</fullName>
        <formula>Market_Share_ID__r.County_FIPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County FIPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Market_Share_ID__r.County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_AB__c</fullName>
        <formula>Dealer_Segementation_ID__r.Dealer_AB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer AB#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Address__c</fullName>
        <formula>Dealer_Segementation_ID__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <formula>Dealer_Segementation_ID__r.Dealer_Name_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Segementation_ID__c</fullName>
        <label>Dealer Segmentation ID</label>
        <referenceTo>Dealer_Segmentation__c</referenceTo>
        <relationshipName>Dealer_Seg_Market_Share_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feeding_Rate__c</fullName>
        <formula>Market_Share_ID__r.Feeding_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feeding Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Share_ID__c</fullName>
        <label>Market Share ID</label>
        <referenceTo>Market_Share__c</referenceTo>
        <relationshipName>Dealer_Seg_Market_Share_Junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Market_Share_Percentage__c</fullName>
        <formula>Market_Share_ID__r.Market_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <formula>text(Market_Share_ID__r.Species__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Species</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>text(Market_Share_ID__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tons_Available__c</fullName>
        <formula>Market_Share_ID__r.Tons_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tons Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tons_Sold__c</fullName>
        <formula>Market_Share_ID__r.Tons_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tons Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dealer Seg &amp; Market Share</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Seg &amp; Market Share</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>